[package]
name = "ogpurl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"]}
exitcode = { version = "1.1.2" }
oglens = { version = "0.1.1" }
reqwest = { version = "0.11.17" }
tokio = { version = "1.28.0", features = ["full"] }

[[bin]]
name = "ogpurl"
path = "./packages/cli/main.rs"

[lib]
name = "ogpurl_core"
path = "./packages/core/core.rs"
